# GoldLaceRust

./: .gitignore  Cargo.toml  LICENSE-CC0  PALETTES-NOTICE.md  README.md  gold-lace-cleanroom-spec.md  palettes.json  shell.nix
.github/workflows/: rust.yml
src/: main.rs
